# hitman

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  activate_conda.bat  environment.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt
.github/workflows/: python-unittest.yml
docs/source/: conf.py  index.rst  overview.rst  references.bib  usage.rst
docs/source/notebooks/: explanation_rkmk_solver.ipynb  how_to_compensate_coning.ipynb
hitman/: derivative.py  extend.py  gyro.py  integrate.py  lie.py  plot.py
hitman/ode/: __init__.py  butcher.py  rkmk.py  runge_kutta.py  solve.py
hitman/rotation/: __init__.py  cartesian.py  exponential.py
tests/: common.py  extend_test.py  gyro_test.py  lie_test.py  plot_test.py  rotation_cartesian_test.py  rotation_exponential_test.py  runge_kutta_mk_test.py  runge_kutta_test.py
